--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
         "@types/jest": "^29.5.12",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
+        "jest-preset-angular": "^14.1.0",
         "ng-packagr": "^17.3.0",
         "prettier": "^3.2.5",
         "prettier-plugin-organize-imports": "^3.2.4",
+        "ts-jest": "^29.1.5",
+        "ts-node": "^10.9.2",
         "typescript": "~5.4.2"
     }
 }
