feat(purify\utils): Added utility for purify source data via dompurify

--- a/projects/purify/package.json
+++ b/projects/purify/package.json
@@ -4,7 +4,9 @@
     "license": "MIT",
     "peerDependencies": {
         "@angular/common": "^17.3.0",
-        "@angular/core": "^17.3.0"
+        "@angular/core": "^17.3.0",
+        "@types/dompurify": "^3.0.5",
+        "dompurify": "^3.1.6"
     },
     "dependencies": {
         "tslib": "^2.3.0"
